@@ -1,21 +1,20 @@
 package org.key_project.util.java;
 
 import java.io.*;
-import java.math.BigInteger;
 import java.net.*;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.security.CodeSource;
-import java.security.MessageDigest;
-import java.security.NoSuchAlgorithmException;
-import java.util.*;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
+import java.util.Arrays;
+import java.util.Iterator;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.function.Predicate;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipException;
-import java.util.zip.ZipFile;
+import java.util.zip.ZipInputStream;
 
 /**
  * Provides static methods to work with java IO.
@@ -29,7 +28,7 @@ public final class IOUtil {
     public static final int BUFFER_SIZE = 1024 * 10;
 
     /**
-     * The default charset to use. The value is independent from the current operating system.
+     * The default charset to use. The value is independent of the current operating system.
      */
     public static final Charset DEFAULT_CHARSET = StandardCharsets.UTF_8;
 
@@ -37,53 +36,6 @@ public final class IOUtil {
      * Forbid instances by this private constructor.
      */
     private IOUtil() {
-    }
-
-    /**
-     * Computes the MD5 checksum of the given {@link File}.
-     *
-     * @param file The {@link File} to compute its MD5 checksum.
-     * @return The computed MD5 checksum.
-     * @throws IOException Occurred Exception.
-     */
-    public static String computeMD5(File file) throws IOException {
-        if (file == null) {
-            throw new IOException("Can't compute MD5 without a File.");
-        }
-        if (!file.isFile()) {
-            throw new IOException(
-                "Can't compute MD5, because \"" + file + "\" is not an existing file.");
-        }
-        return computeMD5(new FileInputStream(file));
-    }
-
-    /**
-     * Computes the MD5 checksum of the given {@link InputStream} and closes it.
-     *
-     * @param in The {@link InputStream} which provides the content to compute its MD5 checksum. The
-     *        {@link InputStream} will be closed.
-     * @return The computed MD5 checksum.
-     * @throws IOException Occurred Exception.
-     */
-    public static String computeMD5(InputStream in) throws IOException {
-        if (in == null) {
-            throw new IOException("Can't compute MD5 without an InputStream.");
-        }
-        try {
-            MessageDigest digest = MessageDigest.getInstance("MD5");
-            byte[] buffer = new byte[8192];
-            int read;
-            while ((read = in.read(buffer)) > 0) {
-                digest.update(buffer, 0, read);
-            }
-            byte[] md5sum = digest.digest();
-            BigInteger bigInt = new BigInteger(1, md5sum);
-            return bigInt.toString(16);
-        } catch (NoSuchAlgorithmException e) {
-            throw new IOException("Algorithm MD5 is not available.");
-        } finally {
-            in.close();
-        }
     }
 
     /**
@@ -109,13 +61,9 @@ public final class IOUtil {
     public static String getFileExtension(File file) {
         if (file != null) {
             String name = file.getName();
-            if (name != null) {
-                int dotIndex = name.lastIndexOf(".");
-                if (dotIndex >= 0) {
-                    return name.substring(dotIndex + 1);
-                } else {
-                    return null;
-                }
+            int dotIndex = name.lastIndexOf('.');
+            if (dotIndex >= 0) {
+                return name.substring(dotIndex + 1);
             } else {
                 return null;
             }
@@ -206,7 +154,7 @@ public final class IOUtil {
             return null;
         }
 
-        try (InputStreamReader reader = new InputStreamReader(in)) {
+        try (InputStreamReader reader = new InputStreamReader(in, StandardCharsets.UTF_8)) {
             StringBuilder sb = new StringBuilder();
             char[] buffer = new char[BUFFER_SIZE];
             int read;
@@ -253,11 +201,13 @@ public final class IOUtil {
      */
     public static void writeTo(OutputStream out, String content, String encoding)
             throws IOException {
-        if (out == null || content == null)
+        if (out == null || content == null) {
             return;
+        }
 
         try (PrintStream printStream =
-            encoding != null ? new PrintStream(out, false, encoding) : new PrintStream(out)) {
+            encoding != null ? new PrintStream(out, false, encoding)
+                    : new PrintStream(out, false, DEFAULT_CHARSET)) {
             printStream.print(content);
         }
     }
@@ -335,10 +285,11 @@ public final class IOUtil {
      * @throws IOException Occurred Exception.
      */
     public static LineInformation[] computeLineInformation(InputStream in) throws IOException {
-        if (in == null)
+        if (in == null) {
             return new LineInformation[0];
+        }
 
-        try (InputStreamReader reader = new InputStreamReader(in)) {
+        try (InputStreamReader reader = new InputStreamReader(in, StandardCharsets.UTF_8)) {
             List<LineInformation> result = new LinkedList<>();
             char[] buffer = new char[BUFFER_SIZE]; // Buffer with the read signs
 
@@ -568,20 +519,17 @@ public final class IOUtil {
      * {@link IFilter}.
      *
      * @param file The {@link File} to start search in.
-     * @param filter An optional {@link IFilter} used to accept files. Without a filter all
+     * @param filter An optional {@link Predicate} used to accept files. Without a filter all
      *        {@link File}s are accepted.
      * @return The accepted {@link File}s.
      * @throws IOException Occurred Exception
      */
-    public static List<File> search(File file, final IFilter<File> filter) throws IOException {
-        final List<File> result = new LinkedList<File>();
+    public static List<File> search(File file, final Predicate<File> filter) throws IOException {
+        final List<File> result = new LinkedList<>();
         if (file != null) {
-            visit(file, new IFileVisitor() {
-                @Override
-                public void visit(File visitedFile) {
-                    if (filter == null || filter.select(visitedFile)) {
-                        result.add(visitedFile);
-                    }
+            visit(file, visitedFile -> {
+                if (filter == null || filter.test(visitedFile)) {
+                    result.add(visitedFile);
                 }
             });
         }
@@ -612,14 +560,14 @@ public final class IOUtil {
      *
      * @author Martin Hentschel
      */
-    public static interface IFileVisitor {
+    public interface IFileVisitor {
         /**
          * Do something with the visited {@link File}.
          *
          * @param file The visited {@link File}.
          * @throws IOException Occurred Exception
          */
-        public void visit(File file) throws IOException;
+        void visit(File file) throws IOException;
     }
 
     /**
@@ -634,7 +582,7 @@ public final class IOUtil {
             String text = IOUtil.readFrom(in);
             text = text.replace("\r\n", "\n");
             text = text.replace("\r", "\n");
-            return new ByteArrayInputStream(text.getBytes());
+            return new ByteArrayInputStream(text.getBytes(StandardCharsets.UTF_8));
         } else {
             return null;
         }
@@ -788,7 +736,7 @@ public final class IOUtil {
                 String host = url.getHost();
                 // A '+' in file names is not supported, since it is converted
                 // into a space ('%20') according to the URI standard.
-                String path = URLDecoder.decode(url.getPath(), "UTF-8");
+                String path = URLDecoder.decode(url.getPath(), StandardCharsets.UTF_8);
                 String query = url.getQuery();
                 String ref = url.getRef();
                 return new URI(!StringUtil.isEmpty(protocol) ? protocol : null,
@@ -800,7 +748,7 @@ public final class IOUtil {
             } else {
                 return null;
             }
-        } catch (URISyntaxException | UnsupportedEncodingException e) {
+        } catch (URISyntaxException e) {
             return null;
         }
     }
@@ -855,6 +803,37 @@ public final class IOUtil {
     /**
      * Extracts a ZIP archive to the given target directory.
      *
+     * @param in the ZIP archive to extract
+     * @param targetDir the directory the extracted files will be located in
+     * @throws ZipException if a ZIP format error occurs
+     * @throws IOException if an I/O error occurs
+     */
+    public static void extractZip(InputStream in, Path targetDir) throws IOException {
+        try (ZipInputStream zin = new ZipInputStream(in)) {
+            for (ZipEntry entry = zin.getNextEntry(); entry != null; entry = zin.getNextEntry()) {
+                Path path = targetDir.resolve(entry.getName());
+                if (!path.normalize().startsWith(targetDir)) {
+                    // malicious file entry name outside of parent
+                    continue;
+                }
+                if (entry.isDirectory()) {
+                    /*
+                     * we use createDirectories instead of createDirectory in case the parent
+                     * directory does not exist
+                     */
+                    Files.createDirectories(path);
+                } else {
+                    // create nonexistent parent directories and then extract the file
+                    Files.createDirectories(path.getParent());
+                    Files.copy(zin, path);
+                }
+            }
+        }
+    }
+
+    /**
+     * Extracts a ZIP archive to the given target directory.
+     *
      * @param archive the ZIP archive to extract
      * @param targetDir the directory the extracted files will be located in
      * @throws ZipException if a ZIP format error occurs
@@ -864,63 +843,24 @@ public final class IOUtil {
         if (archive == null || targetDir == null) {
             return;
         }
-
-        try (ZipFile zipFile = new ZipFile(archive.toFile())) {
-            Enumeration<? extends ZipEntry> entries = zipFile.entries();
-            while (entries.hasMoreElements()) {
-                ZipEntry entry = entries.nextElement();
-                if (entry.isDirectory()) {
-                    /*
-                     * we use createDirectories instead of createDirectory in case the parent
-                     * directory does not exist
-                     */
-                    Files.createDirectories(targetDir.resolve(entry.getName()));
-                } else {
-                    // create nonexistent parent directories and then extract the file
-                    Files.createDirectories(targetDir.resolve(entry.getName()).getParent());
-                    Files.copy(zipFile.getInputStream(entry), targetDir.resolve(entry.getName()));
-                }
-            }
-        }
+        extractZip(new FileInputStream(archive.toFile()), targetDir);
     }
-
-
-    private static Pattern URL_JAR_FILE = Pattern.compile("jar:file:([^!]+)!/(.+)");
 
     /**
      * Tries to open a stream with the given file name.
      *
-     * @param resourceLocation either an URL or a file name
+     * @param resourceLocation either a URL or a file name
      * @throws IOException if file could not be opened
      */
     public static InputStream openStream(String resourceLocation) throws IOException {
-        final Matcher matcher = URL_JAR_FILE.matcher(resourceLocation);
-        if (matcher.matches()) {
-            return openStreamFileInJar(matcher);
-        }
+        // Removed Jar file handling:
+        // Did not work and URL already handles it
 
         try {
             URL url = new URL(resourceLocation);
             return url.openStream();
         } catch (MalformedURLException e) {
             return new FileInputStream(resourceLocation);
-        }
-    }
-
-    private static InputStream openStreamFileInJar(String fileName) throws IOException {
-        final Matcher matcher = URL_JAR_FILE.matcher(fileName);
-        if (matcher.matches()) {
-            return openStreamFileInJar(matcher);
-        }
-        throw new IllegalArgumentException("Given filename is not a file in jar file");
-    }
-
-    private static InputStream openStreamFileInJar(Matcher matcher) throws IOException {
-        String jarFile = matcher.group(1);
-        String file = matcher.group(2);
-        try (ZipFile zipFile = new ZipFile(jarFile)) {
-            ZipEntry entry = zipFile.getEntry(file);
-            return zipFile.getInputStream(entry);
         }
     }
 }
